tests/baselines/reference/collisionThisExpressionAndLocalVarInLambda.errors.txt
==== tests/cases/compiler/collisionThisExpressionAndLocalVarInLambda.ts (1 errors) ====
    declare function alert(message?: any): void;
    
    var x = {
        doStuff: (callback) => () => {
            var _this = 2;
                ~~~~~~~~~
!!! collisionThisExpressionAndLocalVarInLambda.ts(5,13): error TS2200: Duplicate identifier '_this'. Compiler uses variable declaration '_this' to capture 'this' reference.
            return callback(this);
        }
    }
    alert(x.doStuff(x => alert(x)));